[tool.poetry]
name = "uar"
version = "0.1.0"
description = "Umhverfisráðuneyti alþýðunnar"
authors = ["Jökull Sólberg Auðunsson <jokull@solberg.is>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
mkdocs-material = "^7.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
